--- a/index.html.html
+++ b/index.html.html
@@ -14,12 +14,12 @@
 
   <h3>Connect with me on social media</h3>
   <ul>
-    <li><a href="http://html5doctor.com/" target="_blank">Email</a></li>
+    <li><a href="someone@gmail.com" target="_blank">Email</a></li>
     <li><a href="#" target="_blank"> <strong>Github</strong></a></li>
     <li><strong>Twitter:</strong><a href="#">Coming soon</a></li>
   </ul>
 
-  <table>
+  <table align="right">
     <thead>
         <tr>
             <th colspan="4">Some of my Favorite stuffs</th>
@@ -34,7 +34,7 @@
 
     <tbody>
       <tr>
-        <td>How to tame your habits</td>
+        <td>Tame your habits</td>
         <td>Rambo</td>
         <td>Marry You</td>
         <td>Running</td>
@@ -44,13 +44,8 @@
           <td>Lion King</td>
           <td>Halo</td>
           <td>Skating</td>
-        </tr>
-      <tr>
-        <td>How to tame your habits</td>
-        <td>Rambo</td>
-        <td>Marry You</td>
-        <td>Running</td>
       </tr>
+
       <tr>
           <td>Views from above</td>
           <td>Three Bad guys</td>
